硬件仿真器汉化完成