@@ -348,7 +348,7 @@ public class MemoryComponent extends JPanel implements MemoryGUI {
      * Highlights the value at the given index.
      */
     public void highlight(int index) {
-        highlightIndex.addElement(new Integer(index));
+        highlightIndex.addElement(Integer.valueOf(index));
         repaint();
     }
 
