@@ -287,7 +287,7 @@ public class MemorySegmentComponent extends JPanel
      * Highlights the value at the given index.
      */
     public void highlight(int index) {
-        highlightIndex.addElement(new Integer(index));
+        highlightIndex.addElement(Integer.valueOf(index));
         repaint();
     }
 
