@@ -418,7 +418,7 @@ public class CompositeGateClass extends GateClass {
 
         while (connectionIter.hasNext()) {
             Connection connection = (Connection)connectionIter.next();
-            Integer part = new Integer(connection.getPartNumber());
+            Integer part = Integer.valueOf(connection.getPartNumber());
             int gatePinNumber = connection.getGatePinNumber();
 
             switch (connection.getType()) {
@@ -461,7 +461,7 @@ public class CompositeGateClass extends GateClass {
 
         // connect the "master part" node to all the parts.
         for (int i = 0; i < partsList.size(); i++)
-            graph.addEdge(partsList, new Integer(i));
+            graph.addEdge(partsList, Integer.valueOf(i));
 
         // connect all output pins to the "master output" node
         for (int i = 0; i < outputPinsInfo.length; i++)
